--- a/song-nav.css
+++ b/song-nav.css
@@ -1,4 +1,5 @@
 /* SONG NAVBAR */
+/* LEFT */
 .song-navbar {
   width: 100%;
   height: 10vh;
@@ -9,6 +10,7 @@
   margin: 0;
 
   font-family: sans-serif;
+  display: flex;
 }
 
 .left-song-nav {
@@ -22,6 +24,14 @@
   margin: 10px 0 0 10px;
 
   display: flex;
+}
+
+.text-description a:link {
+  color: white;
+}
+
+.text-description a:visited {
+  color: white;
 }
 
 .left-song-nav .text-description h5 {
@@ -49,4 +59,79 @@
 .song-nav-icons-resize {
   width: 20px;
   height: 20px;
+}
+
+
+
+
+/* MIDDLE */
+.middle-song-nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.middle-song-nav .top-part-song-nav{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 200px;
+  margin-bottom: 5px;
+}
+
+.top-part-song-nav img {
+  width: 12px;
+  height: 12px;
+}
+
+#middle-icon{
+  width: 24px;
+  height: 24px;
+}
+
+.btm-part-song-nav {
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.middle-song-nav .btm-part-song-nav p {
+  margin: 0 8px 0 8px;
+  font-size: 10px;
+}
+
+.btm-part-song-nav .song-bar-line{
+  height: 3px;
+  min-width: 300px;
+  border-radius: 1.5px;
+  background-color: gray;
+}
+
+
+/* RIGHT */
+.icons-combo {
+  /* width: 130px; */
+
+  display: flex;
+  align-items: center;
+}
+
+.right-song-nav .icons-combo img {
+  width: 16px;
+  height: 16px;
+  margin-right: 14px;
+}
+
+#first-icon {
+  width: 14px;
+  height: 14px;
+  margin-right: 14px;
+}
+
+.volume-line {
+  height: 4px;
+  width: 80px;
+  border-radius: 2px;
+  background-color: white;
 }
