--- a/navbar.css
+++ b/navbar.css
@@ -65,3 +65,8 @@ hr{
 .recommended-album img{
     opacity: 1;
 }
+@media screen and (max-width: 767px) {
+    .sidebar {
+      display: none;
+    }
+  }
