--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -37,4 +37,32 @@
       top: 105px;
   }
 
+  #leftIcon {
+      width: 15px;
+      color: white;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+  }
+
+  #rightIcon {
+    width: 15px;
+    color: white;
+    position: absolute;
+    top: 20px;
+    left: 60px;
+}
+
+.jumbotron .btn {
+    background-color:black;
+    border: none;
+    border-radius: 20px;
+    position: absolute;
+    bottom: 25px;
+    right: 0;
+    padding: 2px 10px 2px 10px;
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
   
