--- a/albumStyle.css
+++ b/albumStyle.css
@@ -39,8 +39,7 @@ body {
   margin-bottom: 1rem;
 
   background: rgb(0,0,0);
-background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
-  /* background-color: #212529; */
+  /* background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%); linear gradient */
   position: absolute;
   right: 0;
   top: 300px;
