--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -54,7 +54,7 @@
 }
 
 .jumbotron .btn {
-    background-color:black;
+    background-color: black;
     border: none;
     border-radius: 20px;
     position: absolute;
@@ -63,6 +63,13 @@
     padding: 2px 10px 2px 10px;
     font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
+}
+
+.profilePic {
+    width: 15px;
+    position: absolute;
+    bottom: 25px;
+    right: 0;
 }
 
   
