--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -5,6 +5,8 @@
     height: 100%;
     background-color: red;
     font-family: Arial, Helvetica, sans-serif;
+    margin-bottom: 0;
+    border-radius: 0;
 
   }
 
@@ -70,6 +72,37 @@
     position: absolute;
     bottom: 25px;
     right: 0;
+}
+
+.underJumbotron {
+    background-color: #444444;
+    margin: 0;
+    padding: 5px;
+}
+
+.pauseButton {
+    background-color: #1CBB52;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.btn-secondary {
+    background-color: #494949;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin: 10px;
+}
+
+.ellipsisIcon2 {
+    width: 25px;
+    fill: #BAB7BE;
+    margin: 10px;
 }
 
   
