--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -47,12 +47,20 @@
       left: 20px;
   }
 
+  #leftIcon:hover {
+      cursor: pointer;
+  }
+
   #rightIcon {
     width: 15px;
     color: white;
     position: absolute;
     top: 20px;
     left: 60px;
+}
+
+#rightIcon:hover {
+    cursor: pointer;
 }
 
 .jumbotron .btn {
@@ -90,6 +98,11 @@
     margin: 10px;
 }
 
+.pauseButton:hover {
+    cursor: pointer;
+    background-color: green;
+}
+
 .btn-secondary {
     background-color: #494949;
     font-size: 10px;
@@ -97,12 +110,23 @@
     font-weight: bold;
     letter-spacing: 1px;
     margin: 10px;
+    border: none;
+}
+
+.btn-secondary:hover {
+    cursor: pointer;
+    background-color: darkslategray;
 }
 
 .ellipsisIcon2 {
     width: 25px;
     fill: #BAB7BE;
     margin: 10px;
+}
+
+.ellipsisIcon2:hover {
+    cursor: pointer;
+    fill: white;
 }
 
   
