artist-page done

--- a/song-nav.css
+++ b/song-nav.css
@@ -37,7 +37,7 @@
 }
 
 .left-song-nav .text-description h5 {
-  font-size: 12px;  
+  font-size: 12px;
   margin-bottom: 0;
 }
 
@@ -53,7 +53,6 @@
   height: 50px;
 }
 
-
 .song-nav-icons {
   margin-left: 10px;
 }
@@ -64,19 +63,12 @@
 }
 
 .song-nav-icons-resize:hover {
-  filter: 
-   invert(0.28)
-   brightness(1.13);
+  filter: invert(0.28) brightness(1.13);
 }
 
 .song-nav-icons-resize:active {
-  filter:
-   invert(0.4)
-   brightness(1.0);
+  filter: invert(0.4) brightness(1);
 }
-
-
-
 
 /* MIDDLE */
 .middle-song-nav {
@@ -85,7 +77,7 @@
   align-items: center;
 }
 
-.middle-song-nav .top-part-song-nav{
+.middle-song-nav .top-part-song-nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -100,18 +92,14 @@
 }
 
 .top-part-song-nav img:hover {
-  filter:
-   invert(0.28)
-   brightness(1.13);
+  filter: invert(0.28) brightness(1.13);
 }
 
 .top-part-song-nav img:active {
-  filter:
-   invert(0.4)
-   brightness(1.0);
+  filter: invert(0.4) brightness(1);
 }
 
-#middle-icon{
+#middle-icon {
   width: 24px;
   height: 24px;
 }
@@ -127,13 +115,12 @@
   font-size: 10px;
 }
 
-.btm-part-song-nav .song-bar-line{
+.btm-part-song-nav .song-bar-line {
   height: 3px;
   min-width: 400px;
   border-radius: 1.5px;
   background-color: gray;
 }
-
 
 /* RIGHT */
 .icons-combo {
@@ -148,15 +135,11 @@
 }
 
 .right-song-nav .icons-combo img:hover {
-  filter:
-  invert(0.28)
-  brightness(1.13);
+  filter: invert(0.28) brightness(1.13);
 }
 
 .right-song-nav .icons-combo img:active {
-  filter:
-  invert(0.4)
-  brightness(1.0);
+  filter: invert(0.4) brightness(1);
 }
 
 #first-icon {
