--- a/albumStyle.css
+++ b/albumStyle.css
@@ -16,12 +16,21 @@ body {
     height: 30px;
 }
 
+#playButton:hover {
+    background-color: green;
+}
+
 #heartIcon {
     display: inline-block;
     width: 30px;
     height: 30px;
     margin: 20px 0 0 40px;
-    color: #BAB7BE;
+    fill: #BAB7BE;
+}
+
+#heartIcon:hover {
+    cursor: pointer;
+    fill: white;
 }
 
 #ellipsisIcon {
@@ -29,19 +38,20 @@ body {
     width: 30px;
     height: 30px;
     margin: 20px 0 0 40px;
-    color: #BAB7BE;
+    fill: #BAB7BE;
+}
+
+#ellipsisIcon:hover {
+    cursor: pointer;
+    fill: white;
 }
 
 .table {
     color: #BAB7BE;
     margin: 20px 40px 0 20px;
-    background-color: black;
 }
 
 .borderless td, .borderless th {
-    border: none;
-}
-table, tr, td {
     border: none;
 }
 
@@ -55,4 +65,7 @@ td h6 {
     margin: 0;
 }
 
+hr .borderless {
+    background-color: red !important;
+}
 
