--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -60,3 +60,53 @@
   font-size: 12px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.underJumbotron {
+    background-color: #444444;
+    margin: 0;
+    padding: 5px;
+}
+
+.pauseButton {
+    background-color: #1CBB52;
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    padding: 10px;
+    margin: 10px;
+}
+
+.pauseButton:hover {
+    cursor: pointer;
+    background-color: green;
+}
+
+.btn-secondary {
+    background-color: #494949;
+    font-size: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    margin: 10px;
+    border: none;
+}
+
+.btn-secondary:hover {
+    cursor: pointer;
+    background-color: darkslategray;
+}
+
+.ellipsisIcon2 {
+    width: 25px;
+    fill: #BAB7BE;
+    margin: 10px;
+}
+
+.ellipsisIcon2:hover {
+    cursor: pointer;
+    fill: white;
+}
+
+  
