--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -108,5 +108,13 @@
     cursor: pointer;
     fill: white;
 }
+tr, tr h6{
+    font-size: 20px !important;
+}
+tr:hover{
+    cursor: pointer;
+    background-color: rgba(66, 66, 66, 0.2);
+    
 
-  
+}
+
