--- a/albumStyle.css
+++ b/albumStyle.css
@@ -16,6 +16,12 @@ body {
     height: 30px;
 }
 
+#playIcon1 {
+    width: 30px;
+    height: 30px;
+    fill: red;
+}
+
 #playButton:hover {
     background-color: green;
 }
@@ -67,5 +73,25 @@ td h6 {
 
 hr .borderless {
     background-color: red !important;
+}
+
+
+tr {
+    cursor: pointer;
+}
+
+tr:hover {
+    background-color: darkslategray;
+}
+
+#headingTrack:hover {
+    cursor: auto;
+    background-color: #121212;
+    
+}
+
+#playing {
+    color: #1CBB52;
+    margin: 10px 30px 30px 30px;
 }
 
