--- a/navbar.css
+++ b/navbar.css
@@ -81,3 +81,75 @@ hr{
 
   
 
+  .play-btn{
+    background: var(--green);
+  }
+  
+  .play-btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    transform: translateX(-60px);
+    opacity: 0;
+    top: 25%;
+    left: 90%;  }
+  
+
+  .card:hover .play-btn{
+    opacity: 1;
+
+
+  }
+  .play-btn::before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left: 2px;
+    margin: auto;
+    border-style: solid;
+    border-width: 7px 0 7px 10px;
+    border-color: transparent transparent transparent white;
+  }
+
+  .play-btn-2 {
+    background: var(--green);
+  }
+  
+  .play-btn-2 {
+    width: 74px;
+    height: 74px;
+    border-radius: 50%;
+    cursor: pointer;
+    position: absolute;
+    transform: translateX(-60px);
+    opacity: 0;
+    top: 30%;
+    left: 60%;
+}  
+  
+
+  .card:hover .play-btn-2{
+    opacity: 1;
+
+
+  }
+  .play-btn-2::before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left: 2px;
+    margin: auto;
+    border-style: solid;
+    border-width: 7px 0 7px 10px;
+    border-color: transparent transparent transparent white;
+  }
