--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -129,5 +129,11 @@
     fill: white;
 }
 
+#userDropdown {
+    background-color: black;
+}
 
+#userDropdown:hover {
+    background-color: darkslategray;
+}
 
