--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -1,5 +1,5 @@
 .jumbotron {
-  background-image: url("https://i.ytimg.com/vi/x3aMO8wLNyc/mqdefault.jpg");
+  background-image: url("https://images.wsj.net/im-238034?width=1280&size=1");
   background-size: cover;
   height: 100%;
   background-color: red;
@@ -62,57 +62,56 @@
 }
 
 .underJumbotron {
-    background-color: #444444;
-    margin: 0;
-    padding: 5px;
+  background-color: #444444;
+  margin: 0;
+  padding: 5px;
 }
 
 .pauseButton {
-    background-color: #1CBB52;
-    color: white;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    padding: 10px;
-    margin: 10px;
+  background-color: #1cbb52;
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .pauseButton:hover {
-    cursor: pointer;
-    background-color: green;
+  cursor: pointer;
+  background-color: green;
 }
 
 .btn-secondary {
-    background-color: #494949;
-    font-size: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    letter-spacing: 1px;
-    margin: 10px;
-    border: none;
+  background-color: #494949;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 10px;
+  border: none;
 }
 
 .btn-secondary:hover {
-    cursor: pointer;
-    background-color: darkslategray;
+  cursor: pointer;
+  background-color: darkslategray;
 }
 
 .ellipsisIcon2 {
-    width: 25px;
-    fill: #BAB7BE;
-    margin: 10px;
+  width: 25px;
+  fill: #bab7be;
+  margin: 10px;
 }
 
 .ellipsisIcon2:hover {
-    cursor: pointer;
-    fill: white;
+  cursor: pointer;
+  fill: white;
 }
-tr, tr h6{
-    font-size: 20px !important;
+tr,
+tr h6 {
+  font-size: 20px !important;
 }
-tr:hover{
-    cursor: pointer;
-    background-color: rgba(66, 66, 66, 0.2);
-    
-
+tr:hover {
+  cursor: pointer;
+  background-color: rgba(66, 66, 66, 0.2);
 }
