--- a/song-nav.css
+++ b/song-nav.css
@@ -3,7 +3,7 @@
 .song-navbar {
   width: 100%;
   height: 10vh;
-  background-color: rgb(48, 48, 48); /* TO BE CHANGED*/
+  background-color: #191919; /* TO BE CHANGED*/
   position: fixed;
   bottom: 0;
   padding: 15px 15px;
