--- a/createPlaylist.css
+++ b/createPlaylist.css
@@ -6,6 +6,8 @@
   color: white;
   font-size: 14px;
   padding: 10px 25px;
+  margin-bottom: 15px;
+  cursor: pointer;
 }
 
 .modal-container {
@@ -29,16 +31,39 @@
 
 .modal {
   background-color: white;
+  color: black;
   padding: 30px 50px;
   border-radius: 5px;
-  height: 400px;
-  width: 600px;
+  height: 450px;
+  width: 800px;
   max-width: 100%;
   text-align: center;
+  display: inline-block;
+  /* justify-content: center; */
+  /* align-items: center; */
+  margin-top: 200px;
+  margin-left: 25%;
+}
 
+.modal p, h1 {
+  display: inline-block;
+}
+
+.playlist-img {
+  width: 250px;
+height: 250px;
+background-color: darkgoldenrod;
+display: inline-block;
+margin-right: 50px;
+margin-bottom: 50px;
+}
+
+.playlist-inner-text {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  text-align: left;
+height: 100px;
+
 }
 
 .modal h1 {
