--- a/song-nav.css
+++ b/song-nav.css
@@ -8,7 +8,7 @@
   bottom: 0;
   padding: 15px 15px;
   margin: 0;
-
+  z-index: 2;
   font-family: sans-serif;
   display: flex;
   align-items: center;
