--- a/supportStyle.css
+++ b/supportStyle.css
@@ -119,3 +119,42 @@
 #listItem:hover {
     color: #1FD662 !important;
 }
+
+#visit {
+    background-color: #FFFFFF;
+    text-align: center;
+    padding: 75px;
+}
+
+#visitTitle {
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+#visitText {
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    font-size: 18px;
+    padding: 10px;
+}
+
+#visitButton {
+    background-color: #1FD662;
+    border: none;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 10px;
+    width: 150px;
+    height: 50px;
+    border-radius: 50px;
+}
+
+#visitButton:hover {
+    cursor: pointer;
+    width: 155px;
+    height: 53px;
+}
