--- a/supportStyle.css
+++ b/supportStyle.css
@@ -158,3 +158,50 @@
     width: 155px;
     height: 53px;
 }
+
+#extra {
+    background-color: black;
+    color: white;
+    text-align: left;
+    padding: 50px 0 50px 0;
+}
+
+#navLogo2 {
+    width: 150px;
+}
+
+#social {
+    background-color: #222326;
+    padding: 10px;
+    border: none;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+}
+
+#social:hover {
+    cursor: pointer;
+}
+
+#socialIcon:hover {
+    fill: #1FD662;
+}
+
+#grayTitle {
+    color: #919496;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 12px;
+    letter-spacing: 2px;
+    text-align: left;
+}
+
+#extraLink {
+    color: white;
+    padding: 0 0 16px 0;
+}
+
+#extraLink:hover {
+    cursor: pointer;
+    color: #1FD662; 
+}
