--- a/jumbotronStyle.css
+++ b/jumbotronStyle.css
@@ -1,103 +1,64 @@
-body {
-    background-color: black;
-}
-
-.body2 {
-    background-color: red;
-}
-
 .jumbotron {
-    background-image: url("https://images.wsj.net/im-238034?width=1280&size=1");
-    background-size: cover;
-    height: 100%;
-    background-color:black;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 0;
-    border-radius: 0;
-
-  }
-
-  .newJumbotron {
-    background-image: url("https://images.wsj.net/im-238034?width=1280&size=1");
-    background-size: auto;
-    height: 100%;
-    background-color:black;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-bottom: 0;
-    border-radius: 0;
-
-  }
-
-  .jumbotron h1 {
-      color: white;
-      font-weight: bold;
-      font-size: 75px;
-      position: relative;
-      top: 90px;
-  }
-
-
-
-  .jumbotron .lead {
-      color: white;
-      position: relative;
-      top: 85px;
-      font-size: 15px;
-  }
-
-  .jumbotron svg {
-      position: relative;
-      top: 105px;
-  }
-
-  .jumbotron .verify {
-      color: white;
-      display: inline-block;
-      position: relative;
-      top: 105px;
-  }
-
-  #leftIcon {
-      width: 15px;
-      color: white;
-      position: absolute;
-      top: 20px;
-      left: 20px;
-  }
-
-  #leftIcon:hover {
-      cursor: pointer;
-  }
-
-  #rightIcon {
-    width: 15px;
-    color: white;
-    position: absolute;
-    top: 20px;
-    left: 60px;
+  background-image: url("https://images.wsj.net/im-238034?width=1280&size=1");
+  background-size: cover;
+  height: 100%;
+  background-color: red;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-#rightIcon:hover {
-    cursor: pointer;
+.jumbotron h1 {
+  color: white;
+  font-weight: bold;
+  font-size: 75px;
+  position: relative;
+  top: 90px;
+}
+
+.jumbotron .lead {
+  color: white;
+  position: relative;
+  top: 85px;
+  font-size: 15px;
+}
+
+.jumbotron svg {
+  position: relative;
+  top: 105px;
+}
+
+.jumbotron .verify {
+  color: white;
+  display: inline-block;
+  position: relative;
+  top: 105px;
+}
+
+#leftIcon {
+  width: 15px;
+  color: white;
+  position: absolute;
+  top: 20px;
+  left: 300px;
+}
+
+#rightIcon {
+  width: 15px;
+  color: white;
+  position: absolute;
+  top: 20px;
+  left: 330px;
 }
 
 .jumbotron .btn {
-    background-color: green;
-    border: none;
-    border-radius: 20px;
-    position: absolute;
-    bottom: 20px;
-    right: 0;
-    padding: 2px 10px 2px 10px;
-    font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.profilePic {
-    width: 15px;
-    position: absolute;
-    bottom: 25px;
-    right: 0;
+  background-color: black;
+  border: none;
+  border-radius: 20px;
+  position: absolute;
+  bottom: 25px;
+  right: 0;
+  padding: 2px 10px 2px 10px;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .underJumbotron {
@@ -108,54 +69,45 @@ body {
 }
 
 .pauseButton {
-    background-color: #1CBB52;
-    color: white;
-    width: 50px;
-    height: 50px;
-    border-radius: 50px;
-    padding: 10px;
-    margin: 10px;
+  background-color: #1cbb52;
+  color: white;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  padding: 10px;
+  margin: 10px;
 }
 
 .pauseButton:hover {
-    cursor: pointer;
-    background-color: green;
+  cursor: pointer;
+  background-color: green;
 }
 
 .btn-secondary {
-    background-color: #494949;
-    font-size: 10px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    letter-spacing: 1px;
-    margin: 10px;
-    border: none;
+  background-color: #494949;
+  font-size: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
+  letter-spacing: 1px;
+  margin: 10px;
+  border: none;
 }
 
 .btn-secondary:hover {
-    cursor: pointer;
-    background-color: darkslategray;
+  cursor: pointer;
+  background-color: darkslategray;
 }
 
 .ellipsisIcon2 {
-    width: 25px;
-    fill: #BAB7BE;
-    margin: 10px;
+  width: 25px;
+  fill: #bab7be;
+  margin: 10px;
 }
 
 .ellipsisIcon2:hover {
-    cursor: pointer;
-    fill: white;
+  cursor: pointer;
+  fill: white;
 }
-
-#userDropdown {
-    background-color: black;
-}
-
-#userDropdown:hover {
-    background-color: darkslategray;
-}
-
 tr,
 tr h6 {
   font-size: 20px !important;
