--- a/createPlaylist.css
+++ b/createPlaylist.css
@@ -1,13 +1,24 @@
 
-.close-btn {
-  background-color: darkolivegreen;
+.add-btn {
+  background-color: #BFBFBF;
   border: 0;
-  border-radius: 5px;
-  color: white;
+  border-radius: 40%;
+  color: black;
   font-size: 14px;
   padding: 10px 25px;
   margin-bottom: 15px;
   cursor: pointer;
+
+  position: absolute;
+  right: 80px;
+}
+
+.close-btn {
+  margin-bottom: 15px;
+  cursor: pointer;
+  position: absolute;
+  top: 30px;
+  right: 30px;
 }
 
 .modal-container {
@@ -30,17 +41,15 @@
 }
 
 .modal {
-  background-color: white;
-  color: black;
+  background-color: #282828;
+  color: white;
   padding: 30px 50px;
   border-radius: 5px;
-  height: 450px;
+  height: 400px;
   width: 800px;
   max-width: 100%;
   text-align: center;
   display: inline-block;
-  /* justify-content: center; */
-  /* align-items: center; */
   margin-top: 200px;
   margin-left: 25%;
 }
@@ -74,3 +83,14 @@ height: 100px;
   font-size: 14px;
   opacity: 0.7;
 }
+
+input {
+  background-color: #3E3E3E;
+  color: #BFBFBF;
+}
+
+input[type="text"]:last-of-type{ padding: 20px 10px; line-height:  68px; }
+/* bg-modal-color: #282828 */
+/* color: white */
+
+/* close color: BFBFBF */
